--- a/src/components/FilterPhonebook/filter-phonebook.module.css
+++ b/src/components/FilterPhonebook/filter-phonebook.module.css
@@ -11,6 +11,7 @@
 	font-weight: 500;
 	font-family: inherit;
 	margin-bottom: 5px;
+	color: #5e4874;
 }
 
 .inputFilter {
@@ -18,5 +19,13 @@
 	margin-bottom: 25px;
 	font-weight: 300;
 	border-radius: 3px;
-	border: 1px solid black;
+	border: 1px solid #5e4874;
+	box-shadow: 1px 1px 2px 2px #06463bac;
+}
+
+.inputFilter:focus,
+.inputFilter:hover {
+	outline-color: #5e4874;
+	border-radius: 3px;
+	box-shadow: 0 0 1px 1px #5e4874;
 }
