--- a/src/pages/HomePage/home-page.module.css
+++ b/src/pages/HomePage/home-page.module.css
@@ -1,18 +1,17 @@
-/* .container {
-	display: inline-block;
-	align-items: center;
-	padding: 5px;
-	margin: 0 auto;
-	width: 100%;
-	background-image: url("../../components/Image/Ariel.jpg");
-	background-repeat: no-repeat;
-	background-size: cover;
-	background-attachment: fixed;
-	border-color: rgb(197, 197, 197);
+.conteinerPhonebook {
+	width: 400px;
+	height: 100%;
+	border: 1px solid;
+	background-color: white;
 	box-shadow: 0px 5px 4px 0 #06463bac;
+	padding: 25px;
+	margin: 15px auto;
+	border-radius: 6px;
 }
- */
+
 .text {
 	margin: 15px 30px;
 	padding: 15px;
+	color: #5e4874;
+	margin: auto;
 }
