--- a/src/pages/ImportantContactsPage/important-contacts-page.module.css
+++ b/src/pages/ImportantContactsPage/important-contacts-page.module.css
@@ -1,4 +1,4 @@
-.contactsItem {
+/* .contactsItem {
 	margin-bottom: 15px;
 }
 
@@ -30,4 +30,4 @@
 .contactsBtn:hover {
 	background-color: rgba(33, 26, 238, 0.5);
 	box-shadow: 1px 1px 2px 2px rgba(10, 9, 56, 0.5);
-}
+} */
